# youtube-up

./: .gitignore  Pipfile  README.md  metadata.py  mypy.ini  pyproject.toml  schema.py  uploader.py
.github/workflows/: ci.yml  docs.yml  publish.yml
youtube_up/: __init__.py  __main__.py  metadata.py  polyfills.py  schema.py  uploader.py
