[tool.poetry]
name = "youtube-up"
version = "0.1.1"
description = "Upload videos to YouTube using the internal YouTube API"
authors = ["7x11x13 <x7x11x13@gmail.com>"]
readme = "README.md"
repository = "https://github.com/7x11x13/youtube-up"
documentation = "https://7x11x13.xyz/youtube-up/youtube_up"
keywords = ["YouTube", "upload"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.15.2"
selenium-wire = "^5.1.0"
requests = "^2.31.0"
dataclasses-json = "^0.6.2"
tqdm = "^4.66.1"

[tool.poetry.scripts]
youtube-up = "youtube_up.__main__:main"


[tool.poetry.group.docs.dependencies]
pdoc = "^14.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
